Fixed OverFlow for Mobile

--- a/src/components/Details/Weather.module.css
+++ b/src/components/Details/Weather.module.css
@@ -4,9 +4,20 @@
     display: flex;
     justify-content: space-between;
     width: 100%;
+    height: 20vh;
 }
 
 .container-item
 {
     width: 48%;
+}
+
+.container-item-image
+{
+    width: 110px;
+}
+
+.container-item-temp
+{
+    font-size: 70px;
 }
