--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,6 @@ body{
   background-color: #213294;
   color: white;
   font-family: 'Roboto', sans-serif;
-  width: 100vw;
-
 }
 body div
 {
